# MetaHack-CTFEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  hackathon_context.md  help.txt  help2.txt  inference.py  models.py  openenv.yaml  push_output.txt  pyproject.toml  test_integration.py
openenv_ctf_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  ctf_environment.py  graders.py  reward.py
server/tasks/: base_task.py  command_injection_task.py  deserialization_task.py  idor_task.py  jwt_task.py  path_traversal_task.py  payment_task.py  sqli_task.py  sqli_union_task.py  ssrf_task.py  xss_task.py
server/vulnerable_app/: __init__.py  app.py  config.py  database.py  server.js
server/vulnerable_app/frontend/: index.html  package-lock.json  package.json  vite.config.js
server/vulnerable_app/frontend/src/: App.jsx
server/vulnerable_app/frontend/src/components/: Navbar.jsx  ReviewCard.jsx
server/vulnerable_app/frontend/src/pages/: Admin.jsx  Cart.jsx  Login.jsx  Messages.jsx  ProductDetail.jsx  Products.jsx  Profile.jsx  Register.jsx  Search.jsx
server/vulnerable_app/routes/: admin.py  auth.py  payments.py  users.py
server/vulnerable_app/src/: app.js  config.js
server/vulnerable_app/src/middleware/: auth.js
server/vulnerable_app/src/routes/: admin.js  auth.js  import.js
